# Computer-Graphic

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
Cyclone/: core.h  particle.cpp
lab0/: main.cpp
lab1/: Contact.cpp  Contact.h  CubeMover.h  ElipsoidMover.h  Fire.cpp  Fire.h  Fireworks.h  FireworksRule.h  Fluid.cpp  Fluid.h  Liquide.h  Mover.h  MoverConnection.h  MyGlWindow.cpp  MyGlWindow.h  MySpring.cpp  MySpring.h  Object.h  Plane.h  PyramidMover.h  Sphere.h  SphereMover.h  main.cpp
